# account_services

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  e2e_field_reference.md  system_introduction.md
.claude/skills/cpp-build-system/: SKILL.md
.claude/skills/cpp-modern-features/: SKILL.md
.claude/skills/cpp-performance-audit/: SKILL.md  demo_audit.sh
.codex/: config.toml
.codex/agents/: awaitor.toml  explorer.toml  reviewer.toml
BaseCore/: CMakeLists.txt
BaseCore/src/: CMakeLists.txt  base_core_mgr.cpp  base_core_mgr.hpp
BaseCore/src/logging/: default_single_log.cpp  default_single_log.hpp  log.cpp  log.hpp  log_benchmark.cpp  log_demo.cpp  log_demo_format_func.cpp  log_demo_format_func.hpp  log_demo_module.hpp  log_fmt_macros.hpp  log_format_registry.cpp  log_format_registry.hpp  log_reader.cpp
BaseCore/src/shm/: shm_benchmark.cpp  shm_cfg_sample.txt  shm_common.cpp  shm_common.hpp  shm_config_reader.cpp  shm_config_reader.hpp  shm_generic.cpp  shm_generic.hpp  shm_generic_benchmark.cpp  shm_generic_test.cpp  shm_interface.cpp  shm_interface.hpp  shm_seqlock.cpp  shm_seqlock.hpp  shm_seqlock_simple_test.cpp  shm_seqlock_test.cpp  shm_test.cpp
BaseCore/src/utils/: spinlock.cpp  spinlock.hpp  spsc_queue.hpp
cmake/: version.h.in
config/: acct.dev.yaml  default.yaml  gateway.dev.yaml  observer.yaml
data/: account_service.db
docs/: broker_api_contract.md  cpp_function_api_guideline.md  cpp_naming_baseline.md  error_logging_design.md  full_chain_e2e.md  lock_design_discussion.md  naming_rename_backlog.md  order_architecture.mmd  order_error_flow.mmd  order_flowchart.md  order_flowchart.mmd  order_monitor_sdk.md  order_state_diagram.mmd  src_api_module.md  src_broker_api_module.md  src_common_module.md  src_core_module.md  src_execution_module.md  src_market_data_module.md  src_modules_overview.md  src_order_module.md  src_portfolio_module.md  src_risk_module.md  src_shm_module.md  src_strategy_module.md
docs/plans/: algo_plan.md  e2etest_plan.md  fund_row_alignment_plan_zh.md  implementation_plan.md  lock_design_discussion.md  naming_rename_backlog.md  new_twap_plan.md  order_book_split_tracking_plan_zh.md  position_loader.md  sell_trade_deduct_failure_plan_zh.md  shm_manager_plan.md  shm_refactor.md  stale_trade_response_order_not_found_plan_zh.md
docs/todo/: docs_impl_mismatch_audit_20260310.md
examples/: CMakeLists.txt  basic_usage.cpp  order_monitor_usage.cpp
gateway/: CMakeLists.txt
gateway/docs/: gateway_design.md  gateway_sequence.mmd
gateway/src/: adapter_loader.cpp  adapter_loader.hpp  gateway_config.cpp  gateway_config.hpp  gateway_loop.cpp  gateway_loop.hpp  main.cpp  order_mapper.cpp  order_mapper.hpp  response_mapper.cpp  response_mapper.hpp  sim_broker_adapter.cpp  sim_broker_adapter.hpp  sim_broker_plugin.cpp
include/api/: export.h  order_api.h  order_monitor_api.h  position_monitor_api.h
include/broker_api/: broker_api.hpp  export.h
include/common/: constants.hpp  fixed_string.hpp  types.hpp
include/core/: account_service.hpp  config_manager.hpp
include/order/: order_book.hpp  order_splitter.hpp
include/portfolio/: account_info.hpp  position_manager.hpp
include/risk/: risk_checker.hpp  risk_manager.hpp
include/shm/: shm_layout.hpp  spsc_queue.hpp
src/: CMakeLists.txt  main.cpp
src/api/: CMakeLists.txt  order_api.cpp  order_monitor_api.cpp  position_monitor_api.cpp
src/broker_api/: broker_api.cpp
src/common/: basecore_log_format.cpp  basecore_log_format.hpp  basecore_log_modules.cpp  basecore_log_modules.hpp  business_log_config.hpp  constants.hpp  error.cpp  error.hpp  fixed_string.hpp  log.cpp  log.hpp  security_identity.hpp  spinlock.cpp  spinlock.hpp  time_utils.cpp  time_utils.hpp  types.hpp
src/core/: account_service.cpp  account_service.hpp  config_manager.cpp  config_manager.hpp  event_loop.cpp  event_loop.hpp
src/execution/: execution_config.hpp  execution_engine.cpp  execution_engine.hpp
src/market_data/: market_data_service.cpp  market_data_service.hpp
src/order/: order_book.cpp  order_book.hpp  order_event_recorder.cpp  order_event_recorder.hpp  order_recovery.cpp  order_recovery.hpp  order_request.hpp  order_router.cpp  order_router.hpp  order_splitter.cpp  order_splitter.hpp  passive_execution.hpp
src/portfolio/: account_info.cpp  account_info.hpp  entrust_record.cpp  entrust_record.hpp  position_loader.cpp  position_loader.hpp  position_manager.cpp  position_manager.hpp  positions.h  trade_record.cpp  trade_record.hpp
src/risk/: risk_checker.cpp  risk_checker.hpp  risk_manager.cpp  risk_manager.hpp
src/shm/: basecore_shm_bridge.hpp  orders_shm.hpp  shm_layout.hpp  shm_manager.cpp  shm_manager.hpp  spsc_queue.hpp
src/strategy/: active_strategy.cpp  active_strategy.hpp
test/: CMakeLists.txt  full_chain_e2e.sh  full_chain_no_cleanup.sh  full_chain_start.sh  full_chain_submit.sh  test_account_service.cpp  test_adapter_loader.cpp  test_config_manager.cpp  test_error_registry.cpp  test_event_loop.cpp  test_execution_engine.cpp  test_full_chain_observer_config.cpp  test_gateway_config.cpp  test_gateway_loop.cpp  test_gateway_mapper.cpp  test_gateway_plugin_mode.cpp  test_logger_async.cpp  test_market_data_service.cpp  test_order_api.cpp  test_order_book_split_tracking.cpp  test_order_event_recorder.cpp  test_order_monitor_api.cpp  test_order_router_split_cancel.cpp  test_position_manager.cpp  test_position_monitor_api.cpp  test_risk_manager.cpp  test_shm_manager.cpp  test_termination_policy.cpp
tools/: CMakeLists.txt  bootstrap_third_party.sh  market_data_quote_cli.cpp  package_api.sh  package_deploy.sh
tools/full_chain_e2e/: CMakeLists.txt  demo_buy_twap.sh  demo_sell_twap.sh  full_chain_observer.cpp  full_chain_observer_config.cpp  full_chain_observer_config.hpp  full_chain_observer_csv_sink.cpp  full_chain_observer_csv_sink.hpp  full_chain_observer_order_watch.cpp  full_chain_observer_order_watch.hpp  full_chain_observer_position_watch.cpp  full_chain_observer_position_watch.hpp  full_chain_observer_time.hpp  order_submit_cli.cpp
(+14 files in other folders)
